RESOLVED FIXED26306
DumpRenderTree crashes on Windows
https://bugs.webkit.org/show_bug.cgi?id=26306
Summary DumpRenderTree crashes on Windows
John Abd-El-Malek
Reported 2009-06-10 16:31:21 PDT
The problem is that CFURLCacheSharedURLCache isn't exported by the CoreNetwork.dll that comes with Safari 4. Reverting 42565 fixes the issue. Not sure if that's the long term solution, or the correct dll will be pushed out.
Attachments
Added a patch (1.97 KB, patch)
2009-06-10 16:41 PDT, John Abd-El-Malek
sfalken: review+
Eric Seidel (no email)
Comment 1 2009-06-10 16:41:37 PDT
John Abd-El-Malek
Comment 2 2009-06-10 16:41:41 PDT
Created attachment 31143 [details] Added a patch Not sure if the source should be updated, or whether there's a version of the DLLs coming out soon that's compatible. At the very least, others who're having this issue can apply this patch.
Steve Falkenburg
Comment 3 2009-06-11 10:31:51 PDT
Reverting that change seems fine for now, and will work both before and after we update the headers to CFNetwork used by the open source project.
Brent Fulgham
Comment 4 2009-06-11 11:20:19 PDT
Committed in @r44609.
John Abd-El-Malek
Comment 5 2009-06-11 11:23:09 PDT
Thanks for committing it for me.
Note You need to log in before you can comment on or make changes to this bug.