2009-06-11  John Abd-El-Malek  <jam@chromium.org>

Reviewed by Steve Falkenburg.

        https://bugs.webkit.org/show_bug.cgi?id=26306

        Revert 42565 as it leads to DumpRenderTree crashing on startup because
        Windows can't find CFURLCacheCopySharedURLCache in CoreNetwork.dll.

        * DumpRenderTree/win/DumpRenderTree.cpp:


Canonical link: https://commits.webkit.org/36433@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44609 268f45cc-cd09-0410-ab3c-d52691b4dbfc